tests/spectest/simd_load.bin.wast
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
  "\00\01\7b\03\82\80\80\80\00\01\00\05\83\80\80\80"
  "\00\01\00\01\07\8d\80\80\80\00\01\09\76\31\32\38"
  "\2e\6c\6f\61\64\00\00\0a\8e\80\80\80\00\01\88\80"
  "\80\80\00\00\41\00\fd\00\04\00\0b\0b\9a\80\80\80"
  "\00\01\00\41\00\0b\14\00\01\02\03\04\05\06\07\08"
  "\09\0a\0b\0c\0d\0e\0f\00\01\02\03"
)
(module instance)
(assert_return
  (invoke "v128.load")
  (v128.const i8x16
    0x0
    0x1
    0x2
    0x3
    0x4
    0x5
    0x6
    0x7
    0x8
    0x9
    0xa
    0xb
    0xc
    0xd
    0xe
    0xf
  )
)
(assert_return
  (invoke "v128.load")
  (v128.const i16x8 0x100 0x302 0x504 0x706 0x908 0xb0a 0xd0c 0xf0e)
)
(assert_return
  (invoke "v128.load")
  (v128.const i32x4 0x302_0100 0x706_0504 0xb0a_0908 0xf0e_0d0c)
)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
  "\00\01\7f\03\82\80\80\80\00\01\00\05\83\80\80\80"
  "\00\01\00\01\07\a3\80\80\80\00\01\1f\61\73\2d\69"
  "\38\78\31\36\5f\65\78\74\72\61\63\74\5f\6c\61\6e"
  "\65\5f\73\2d\76\61\6c\75\65\2f\30\00\00\0a\91\80"
  "\80\80\00\01\8b\80\80\80\00\00\41\00\fd\00\04\00"
  "\fd\15\00\0b\0b\9a\80\80\80\00\01\00\41\00\0b\14"
  "\00\01\02\03\04\05\06\07\08\09\0a\0b\0c\0d\0e\0f"
  "\00\01\02\03"
)
(module instance)
(assert_return (invoke "as-i8x16_extract_lane_s-value/0") (i32.const 0x0))
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
  "\00\01\7b\03\82\80\80\80\00\01\00\05\83\80\80\80"
  "\00\01\00\01\07\97\80\80\80\00\01\13\61\73\2d\69"
  "\38\78\31\36\2e\65\71\2d\6f\70\65\72\61\6e\64\00"
  "\00\0a\96\80\80\80\00\01\90\80\80\80\00\00\41\00"
  "\fd\00\04\00\41\00\fd\00\04\10\fd\23\0b\0b\9a\80"
  "\80\80\00\01\00\41\00\0b\14\00\01\02\03\04\05\06"
  "\07\08\09\0a\0b\0c\0d\0e\0f\00\01\02\03"
)
(module instance)
(assert_return
  (invoke "as-i8x16.eq-operand")
  (v128.const i32x4 0xffff_ffff 0x0 0x0 0x0)
)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\89\80\80\80\00\02\60"
  "\00\01\7b\60\00\01\7f\03\83\80\80\80\00\02\00\01"
  "\05\83\80\80\80\00\01\00\01\07\b3\80\80\80\00\02"
  "\13\61\73\2d\76\31\32\38\2e\6e\6f\74\2d\6f\70\65"
  "\72\61\6e\64\00\00\19\61\73\2d\69\38\78\31\36\2e"
  "\61\6c\6c\5f\74\72\75\65\2d\6f\70\65\72\61\6e\64"
  "\00\01\0a\9f\80\80\80\00\02\8a\80\80\80\00\00\41"
  "\00\fd\00\04\00\fd\4d\0b\8a\80\80\80\00\00\41\00"
  "\fd\00\04\00\fd\63\0b\0b\9a\80\80\80\00\01\00\41"
  "\00\0b\14\00\01\02\03\04\05\06\07\08\09\0a\0b\0c"
  "\0d\0e\0f\00\01\02\03"
)
(module instance)
(assert_return
  (invoke "as-v128.not-operand")
  (v128.const i32x4 0xfcfd_feff 0xf8f9_fafb 0xf4f5_f6f7 0xf0f1_f2f3)
)
(assert_return (invoke "as-i8x16.all_true-operand") (i32.const 0x0))
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
  "\00\01\7b\03\82\80\80\80\00\01\00\05\83\80\80\80"
  "\00\01\00\01\07\9d\80\80\80\00\01\19\61\73\2d\76"
  "\31\32\38\2e\62\69\74\73\65\6c\65\63\74\2d\6f\70"
  "\65\72\61\6e\64\00\00\0a\9c\80\80\80\00\01\96\80"
  "\80\80\00\00\41\00\fd\00\04\00\41\10\fd\00\04\00"
  "\41\20\fd\00\04\00\fd\52\0b\0b\c0\80\80\80\00\03"
  "\00\41\00\0b\10\aa\aa\aa\aa\aa\aa\aa\aa\aa\aa\aa"
  "\aa\aa\aa\aa\aa\00\41\10\0b\10\bb\bb\bb\bb\bb\bb"
  "\bb\bb\bb\bb\bb\bb\bb\bb\bb\bb\00\41\20\0b\10\f0"
  "\f0\f0\f0\ff\ff\ff\ff\00\00\00\00\ff\00\ff\00"
)
(module instance)
(assert_return
  (invoke "as-v128.bitselect-operand")
  (v128.const i32x4 0xabab_abab 0xaaaa_aaaa 0xbbbb_bbbb 0xbbaa_bbaa)
)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
  "\00\01\7b\03\82\80\80\80\00\01\00\05\83\80\80\80"
  "\00\01\00\01\07\98\80\80\80\00\01\14\61\73\2d\69"
  "\38\78\31\36\2e\73\68\6c\2d\6f\70\65\72\61\6e\64"
  "\00\00\0a\92\80\80\80\00\01\8c\80\80\80\00\00\41"
  "\00\fd\00\04\00\41\01\fd\6b\0b\0b\96\80\80\80\00"
  "\01\00\41\00\0b\10\aa\aa\aa\aa\aa\aa\aa\aa\aa\aa"
  "\aa\aa\aa\aa\aa\aa"
)
(module instance)
(assert_return
  (invoke "as-i8x16.shl-operand")
  (v128.const i32x4 0x5454_5454 0x5454_5454 0x5454_5454 0x5454_5454)
)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
  "\00\01\7b\03\82\80\80\80\00\01\00\05\83\80\80\80"
  "\00\01\00\01\07\96\80\80\80\00\01\12\61\73\2d\61"
  "\64\64\2f\73\75\62\2d\6f\70\65\72\61\6e\64\00\00"
  "\0a\9e\80\80\80\00\01\98\80\80\80\00\00\41\00\fd"
  "\00\04\00\41\10\fd\00\04\00\fd\6e\41\10\fd\00\04"
  "\00\fd\71\0b\0b\ab\80\80\80\00\02\00\41\00\0b\10"
  "\02\00\00\00\02\00\00\00\02\00\00\00\02\00\00\00"
  "\00\41\10\0b\10\03\00\00\00\03\00\00\00\03\00\00"
  "\00\03\00\00\00"
)
(module instance)
(assert_return (invoke "as-add/sub-operand") (v128.const i32x4 0x2 0x2 0x2 0x2))
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
  "\00\01\7b\03\82\80\80\80\00\01\00\05\83\80\80\80"
  "\00\01\00\01\07\98\80\80\80\00\01\14\61\73\2d\66"
  "\33\32\78\34\2e\6d\75\6c\2d\6f\70\65\72\61\6e\64"
  "\00\00\0a\97\80\80\80\00\01\91\80\80\80\00\00\41"
  "\00\fd\00\04\00\41\10\fd\00\04\00\fd\e6\01\0b\0b"
  "\ab\80\80\80\00\02\00\41\00\0b\10\00\00\00\43\00"
  "\00\80\3f\66\66\e6\3f\00\00\80\bf\00\41\10\0b\10"
  "\00\00\00\40\00\00\00\40\00\00\00\40\00\00\00\40"
)
(module instance)
(assert_return
  (invoke "as-f32x4.mul-operand")
  (v128.const f32x4 0x1p+8 0x1p+1 0x1.cccc_ccp+1 -0x1p+1)
)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
  "\00\01\7b\03\82\80\80\80\00\01\00\05\83\80\80\80"
  "\00\01\00\01\07\98\80\80\80\00\01\14\61\73\2d\66"
  "\33\32\78\34\2e\61\62\73\2d\6f\70\65\72\61\6e\64"
  "\00\00\0a\91\80\80\80\00\01\8b\80\80\80\00\00\41"
  "\00\fd\00\04\00\fd\e0\01\0b\0b\96\80\80\80\00\01"
  "\00\41\00\0b\10\ff\ff\ff\ff\ff\ff\ff\ff\ff\ff\ff"
  "\ff\ff\ff\ff\ff"
)
(module instance)
(assert_return
  (invoke "as-f32x4.abs-operand")
  (v128.const i32x4 0x7fff_ffff 0x7fff_ffff 0x7fff_ffff 0x7fff_ffff)
)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
  "\00\01\7b\03\82\80\80\80\00\01\00\05\83\80\80\80"
  "\00\01\00\01\07\98\80\80\80\00\01\14\61\73\2d\66"
  "\33\32\78\34\2e\6d\69\6e\2d\6f\70\65\72\61\6e\64"
  "\00\00\0a\97\80\80\80\00\01\91\80\80\80\00\00\41"
  "\00\fd\00\04\00\41\01\fd\00\04\10\fd\e8\01\0b\0b"
  "\ab\80\80\80\00\02\00\41\00\0b\10\aa\aa\aa\aa\aa"
  "\aa\aa\aa\aa\aa\aa\aa\aa\aa\aa\aa\00\41\10\0b\10"
  "\02\00\00\00\02\00\00\00\02\00\00\00\02\00\00\00"
)
(module instance)
(assert_return
  (invoke "as-f32x4.min-operand")
  (v128.const i32x4 0xaaaa_aaaa 0xaaaa_aaaa 0xaaaa_aaaa 0xaaaa_aaaa)
)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
  "\00\01\7b\03\82\80\80\80\00\01\00\05\83\80\80\80"
  "\00\01\00\01\07\a6\80\80\80\00\01\22\61\73\2d\69"
  "\33\32\78\34\2e\74\72\75\6e\63\5f\73\61\74\5f\66"
  "\33\32\78\34\5f\73\2d\6f\70\65\72\61\6e\64\00\00"
  "\0a\91\80\80\80\00\01\8b\80\80\80\00\00\41\00\fd"
  "\00\04\00\fd\f8\01\0b\0b\96\80\80\80\00\01\00\41"
  "\00\0b\10\00\00\00\43\00\00\80\3f\66\66\e6\3f\00"
  "\00\80\bf"
)
(module instance)
(assert_return
  (invoke "as-i32x4.trunc_sat_f32x4_s-operand")
  (v128.const i32x4 0x80 0x1 0x1 0xffff_ffff)
)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
  "\00\01\7b\03\82\80\80\80\00\01\00\05\83\80\80\80"
  "\00\01\00\01\07\a4\80\80\80\00\01\20\61\73\2d\66"
  "\33\32\78\34\2e\63\6f\6e\76\65\72\74\5f\69\33\32"
  "\78\34\5f\75\2d\6f\70\65\72\61\6e\64\00\00\0a\91"
  "\80\80\80\00\01\8b\80\80\80\00\00\41\00\fd\00\04"
  "\00\fd\fb\01\0b\0b\96\80\80\80\00\01\00\41\00\0b"
  "\10\02\00\00\00\02\00\00\00\02\00\00\00\02\00\00"
  "\00"
)
(module instance)
(assert_return
  (invoke "as-f32x4.convert_i32x4_u-operand")
  (v128.const f32x4 0x1p+1 0x1p+1 0x1p+1 0x1p+1)
)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
  "\00\01\7b\03\82\80\80\80\00\01\00\05\83\80\80\80"
  "\00\01\00\01\07\9c\80\80\80\00\01\18\61\73\2d\69"
  "\38\78\31\36\2e\73\77\69\7a\7a\6c\65\2d\6f\70\65"
  "\72\61\6e\64\00\00\0a\96\80\80\80\00\01\90\80\80"
  "\80\00\00\41\00\fd\00\04\00\41\01\fd\00\04\0f\fd"
  "\0e\0b\0b\ab\80\80\80\00\02\00\41\00\0b\10\64\65"
  "\66\67\68\69\6a\6b\6c\6d\6e\6f\70\71\72\73\00\41"
  "\10\0b\10\0f\0e\0d\0c\0b\0a\09\08\07\06\05\04\03"
  "\02\01\00"
)
(module instance)
(assert_return
  (invoke "as-i8x16.swizzle-operand")
  (v128.const i8x16
    0x73
    0x72
    0x71
    0x70
    0x6f
    0x6e
    0x6d
    0x6c
    0x6b
    0x6a
    0x69
    0x68
    0x67
    0x66
    0x65
    0x64
  )
)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
  "\00\01\7b\03\82\80\80\80\00\01\00\05\83\80\80\80"
  "\00\01\00\01\07\8f\80\80\80\00\01\0b\61\73\2d\62"
  "\72\2d\76\61\6c\75\65\00\00\0a\93\80\80\80\00\01"
  "\8d\80\80\80\00\00\02\7b\41\00\fd\00\04\00\0c\00"
  "\0b\0b\0b\9a\80\80\80\00\01\00\41\00\0b\14\00\01"
  "\02\03\04\05\06\07\08\09\0a\0b\0c\0d\0e\0f\00\01"
  "\02\03"
)
(module instance)
(assert_return
  (invoke "as-br-value")
  (v128.const i32x4 0x302_0100 0x706_0504 0xb0a_0908 0xf0e_0d0c)
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\01\0a\94\80\80\80\00\01\8e\80\80\80\00\01"
    "\01\7b\43\00\00\00\00\fd\00\04\00\1a\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\01\0a\95\80\80\80\00\01\8f\80\80\80\00\01"
    "\01\7b\02\40\41\00\fd\00\04\00\0d\00\0b\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\01\0a\90\80\80\80\00\01\8a\80\80\80\00\01"
    "\01\7b\41\00\fd\00\04\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\01\0a\8f\80\80\80\00\01\89\80\80\80\00\00"
    "\20\02\fd\00\04\00\1a\0b"
  )
  "unknown local 2"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\05\83\80\80\80\00"
    "\01\00\01\0a\8d\80\80\80\00\01\87\80\80\80\00\00"
    "\fd\00\04\00\1a\0b"
  )
  "type mismatch"
)
